@@ -5,7 +5,6 @@
 
 package org.opensearch.sql.ast.expression;
 
-import java.util.Arrays;
 import java.util.List;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
@@ -27,7 +26,7 @@ public class UnresolvedArgument extends UnresolvedExpression {
 
   @Override
   public List<UnresolvedExpression> getChild() {
-    return Arrays.asList(value);
+    return List.of(value);
   }
 
   @Override
