@@ -7,7 +7,14 @@ package org.opensearch.sql.storage;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
+
 import org.opensearch.sql.DataSourceSchemaName;
+import org.opensearch.sql.analysis.Analyzer;
+import org.opensearch.sql.analysis.ExpressionAnalyzer;
+import org.opensearch.sql.datasource.DataSourceService;
+import org.opensearch.sql.executor.pagination.CanPaginateVisitor;
+import org.opensearch.sql.expression.function.BuiltinFunctionRepository;
 import org.opensearch.sql.expression.function.FunctionResolver;
 
 /** Storage engine for different storage to provide data access API implementation. */
@@ -22,6 +29,14 @@ public interface StorageEngine {
    * @return FunctionResolvers of datasource functions.
    */
   default Collection<FunctionResolver> getFunctions() {
-    return Collections.emptyList();
+    return List.of();
+  }
+
+  default Analyzer getAnalyzer(DataSourceService dataSourceService, BuiltinFunctionRepository repository) {
+    return null;
+  }
+
+  default CanPaginateVisitor getPaginationAnalyzer() {
+    return null;
   }
 }
